--- a/index.css
+++ b/index.css
@@ -1,4 +1,7 @@
-.header {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+/* .header {
     display: flex;
     justify-content: space-between ;
     margin: 10px;
@@ -41,4 +44,4 @@
     background-color: gainsboro;
     padding: 10px;
     margin: 10px;
-}
+} */
